--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <div class="card preview">
       <img src="https://cdn.discordapp.com/attachments/1444655862797832204/1456595916860428382/Vyn_gkikvbJAJt.png?ex=6958f028&is=69579ea8&hm=5ee156f4b26354346fc616e5f8d6bf1c279544a50e89b5e5891ae9cbab46e5cd" alt="preview" />
       <div class="badges">
-        <div class="badge">Lua</div>
+        <div class="badge">External</div>
         <div class="badge">Fast UI</div>
         <div class="badge">Lightweight</div>
         <div class="badge">Discord Support</div>
@@ -261,7 +261,7 @@
 
   <section id="about" class="features">
     <h2>About Vyn External</h2>
-    <p>Vyn External is a modern, lightweight, and high-performance Lua External designed for speed, stability, and ease of use.</p>
+    <p>Vyn External is a modern, lightweight, and high-performance  External designed for speed, stability, and ease of use.</p>
 
     <div class="feature-grid">
       <div class="card">🚀 Built for fast cheat with minimal delay</div>
