--- a/index.html
+++ b/index.html
@@ -227,7 +227,10 @@
 
       <div class="download-area">
         <button class="btn" onclick="toggleDownloads()">Download</button>
-        <button class="btn secondary">Discord</button>
+        <a href="https://discord.gg/TONLIEN" target="_blank">
+  <button class="btn secondary">Discord</button>
+</a>
+
       </div>
 
       <div id="downloads" class="download-options">
