--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,19 +9,16 @@
     :root {
       --white: #ffffff;
       --dark: #0b0b10;
-      --dark-2: #14141c;
       --text: #f5f5f7;
       --muted: #b5b5c0;
     }
 
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
       font-family: Inter, Arial, sans-serif;
     }
-
-    html { scroll-behavior: smooth; }
 
     body {
       background:
@@ -44,23 +41,23 @@
       border-bottom: 1px solid rgba(255,255,255,0.08);
     }
 
-    header .logo {
+    .logo {
       display: flex;
       align-items: center;
       gap: 12px;
-      font-weight: 700;
       font-size: 20px;
+      font-weight: 700;
       color: var(--white);
     }
 
-    header nav a {
+    nav a {
       color: var(--muted);
       text-decoration: none;
       margin-left: 24px;
       font-weight: 500;
     }
 
-    header nav a.button {
+    nav a.button {
       background: linear-gradient(135deg, #ffffff, #dcdcdc);
       color: #000;
       padding: 10px 18px;
@@ -77,23 +74,18 @@
 
     .hero h1 {
       font-size: 56px;
-      line-height: 1.05;
       margin-bottom: 16px;
     }
 
-    .hero h1 span { color: var(--white); }
+    .hero h1 span {
+      color: var(--white);
+    }
 
     .hero p {
       color: var(--muted);
       max-width: 520px;
       margin-bottom: 32px;
       font-size: 18px;
-    }
-
-    .download-area {
-      display: flex;
-      gap: 16px;
-      align-items: center;
     }
 
     .btn {
@@ -113,6 +105,12 @@
       border: 1px solid rgba(255,255,255,0.25);
     }
 
+    .download-area {
+      display: flex;
+      gap: 16px;
+      align-items: center;
+    }
+
     .download-options {
       margin-top: 20px;
       display: none;
@@ -120,31 +118,14 @@
     }
 
     .card {
-      position: relative;
       background: linear-gradient(180deg, rgba(255,255,255,0.08), rgba(255,255,255,0.02));
       border: 1px solid rgba(255,255,255,0.12);
       border-radius: 20px;
       padding: 24px;
       backdrop-filter: blur(12px);
-      overflow: hidden;
       transition: transform .25s ease, box-shadow .25s ease;
     }
 
-    .card::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(
-        400px circle at var(--x, 50%) var(--y, 50%),
-        rgba(255,255,255,0.25),
-        transparent 40%
-      );
-      opacity: 0;
-      transition: opacity .3s ease;
-      pointer-events: none;
-    }
-
-    .card:hover::before { opacity: 1; }
     .card:hover {
       transform: translateY(-4px);
       box-shadow: 0 20px 60px rgba(255,255,255,0.25);
@@ -192,13 +173,6 @@
       gap: 24px;
     }
 
-    footer {
-      padding: 40px 64px;
-      color: var(--muted);
-      border-top: 1px solid rgba(255,255,255,0.1);
-      text-align: center;
-    }
-
     .faq-item .faq-answer {
       max-height: 0;
       opacity: 0;
@@ -213,10 +187,23 @@
       opacity: 1;
     }
 
+    footer {
+      padding: 40px 64px;
+      color: var(--muted);
+      border-top: 1px solid rgba(255,255,255,0.1);
+      text-align: center;
+    }
+
     @media (max-width: 900px) {
-      .hero { grid-template-columns: 1fr; }
-      header { padding: 24px; }
-      .hero, section.features { padding: 48px 24px; }
+      .hero {
+        grid-template-columns: 1fr;
+      }
+      header {
+        padding: 24px;
+      }
+      .hero, section.features {
+        padding: 48px 24px;
+      }
     }
   </style>
 </head>
@@ -239,7 +226,10 @@
 <main class="hero">
   <div>
     <h1>Cheat faster with <span>Vyn External</span>.</h1>
-    <p>100% keyless & free External — Fast - Never get ban with vyn.</p>
+    <p>
+      Vyn External is a modern Roblox external built for speed, stability,
+      and ease of use. 100% keyless and completely free.
+    </p>
 
     <div class="download-area">
       <button class="btn" onclick="toggleDownloads()">Download</button>
@@ -257,7 +247,7 @@
   <div class="card preview">
     <img src="https://cdn.discordapp.com/attachments/1444655862797832204/1456595916860428382/Vyn_gkikvbJAJt.png">
     <div class="badges">
-      <div class="badge">External</div>
+      <div class="badge">Roblox External</div>
       <div class="badge">Fast UI</div>
       <div class="badge">Lightweight</div>
       <div class="badge">Discord Support</div>
@@ -265,8 +255,79 @@
   </div>
 </main>
 
+<section id="features" class="features">
+  <h2>Features</h2>
+  <p>Built for Roblox players who want performance and simplicity.</p>
+
+  <div class="feature-grid">
+    <div class="card">⚡ Ultra Fast Injection</div>
+    <div class="card">🔓 100% Keyless System</div>
+    <div class="card">🎯 Stable Roblox External</div>
+    <div class="card">🎨 Clean & Simple UI</div>
+    <div class="card">🧠 Easy to Use</div>
+    <div class="card">💻 Lightweight & Optimized</div>
+  </div>
+</section>
+
+<section id="about" class="features">
+  <h2>About Vyn External</h2>
+  <p>
+    Vyn External is a lightweight Roblox external designed to deliver fast
+    execution, a clean interface, and a smooth user experience.
+  </p>
+
+  <div class="feature-grid">
+    <div class="card">🚀 Minimal delay and fast execution</div>
+    <div class="card">🧩 Simple and intuitive design</div>
+    <div class="card">🔒 No key system, no ads</div>
+    <div class="card">👨‍💻 Frequently updated</div>
+  </div>
+</section>
+
+<section id="faq" class="features">
+  <h2>Frequently Asked Questions</h2>
+  <p>Hover over a question to reveal the answer.</p>
+
+  <div class="feature-grid faq-grid">
+    <div class="card faq-item">
+      <strong>Is Vyn External free?</strong>
+      <div class="faq-answer">
+        Yes. Vyn External is completely free and does not require any key.
+      </div>
+    </div>
+
+    <div class="card faq-item">
+      <strong>Is this a Roblox external?</strong>
+      <div class="faq-answer">
+        Yes. Vyn External runs externally from Roblox for better performance.
+      </div>
+    </div>
+
+    <div class="card faq-item">
+      <strong>How do I open the UI?</strong>
+      <div class="faq-answer">
+        Press the <strong>Insert</strong> key on your keyboard.
+      </div>
+    </div>
+
+    <div class="card faq-item">
+      <strong>Is it safe to use?</strong>
+      <div class="faq-answer">
+        Vyn External is built with stability in mind. Always download from official sources.
+      </div>
+    </div>
+
+    <div class="card faq-item">
+      <strong>Where can I get support?</strong>
+      <div class="faq-answer">
+        Join our Discord server for updates and support.
+      </div>
+    </div>
+  </div>
+</section>
+
 <footer>
-  © 2026 Vyn External — Tous droits réservés
+  © 2026 Vyn External — All rights reserved
 </footer>
 
 <script>
@@ -274,14 +335,6 @@
     const el = document.getElementById('downloads');
     el.style.display = el.style.display === 'flex' ? 'none' : 'flex';
   }
-
-  document.querySelectorAll('.card').forEach(card => {
-    card.addEventListener('mousemove', e => {
-      const rect = card.getBoundingClientRect();
-      card.style.setProperty('--x', `${e.clientX - rect.left}px`);
-      card.style.setProperty('--y', `${e.clientY - rect.top}px`);
-    });
-  });
 </script>
 
 </body>
