--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vyn External</title>
+  <title>Prism External</title>
 
   <style>
     :root {
@@ -213,21 +213,21 @@
 <header>
   <div class="logo">
     <img src="https://cdn.discordapp.com/attachments/000000000000000000/000000000000000000/logo.png" width="36">
-    Vyn External
+    Prism External
   </div>
   <nav>
     <a href="#features">Features</a>
     <a href="#about">About</a>
     <a href="#faq">FAQ</a>
-    <a href="#" class="button">Get Vyn</a>
+    <a href="#" class="button">Get Prism</a>
   </nav>
 </header>
 
 <main class="hero">
   <div>
-    <h1>Cheat faster with <span>Vyn External</span>.</h1>
+    <h1>Cheat faster with <span>Prism External</span>.</h1>
     <p>
-      Vyn External is a modern Roblox external built for speed, stability,
+      Prism External is a modern Roblox external built for speed, stability,
       and ease of use. 100% keyless and completely free.
     </p>
 
@@ -245,7 +245,7 @@
   </div>
 
   <div class="card preview">
-    <img src="https://cdn.discordapp.com/attachments/1444655862797832204/1456595916860428382/Vyn_gkikvbJAJt.png">
+    <img src="https://cdn.discordapp.com/attachments/1444655862797832204/1456595916860428382/Prism_gkikvbJAJt.png">
     <div class="badges">
       <div class="badge">Roblox External</div>
       <div class="badge">Fast UI</div>
@@ -270,9 +270,9 @@
 </section>
 
 <section id="about" class="features">
-  <h2>About Vyn External</h2>
+  <h2>About Prism External</h2>
   <p>
-    Vyn External is a lightweight Roblox external designed to deliver fast
+    Prism External is a lightweight Roblox external designed to deliver fast
     execution, a clean interface, and a smooth user experience.
   </p>
 
@@ -290,30 +290,30 @@
 
   <div class="feature-grid faq-grid">
     <div class="card faq-item">
-      <strong>Is Vyn External free?</strong>
+      <strong>Is Prism External free?</strong>
       <div class="faq-answer">
-        Yes. Vyn External is completely free and does not require any key.
+        Yes. Prism External is completely free and does not require any key.
       </div>
     </div>
 
     <div class="card faq-item">
       <strong>Is this a Roblox external?</strong>
       <div class="faq-answer">
-        Yes. Vyn External runs externally from Roblox for better performance.
+        Yes. Prism External runs externally from Roblox for better performance.
       </div>
     </div>
 
     <div class="card faq-item">
       <strong>How do I open the UI?</strong>
       <div class="faq-answer">
-        Press the <strong>Insert</strong> key on your keyboard.
+        Go in settings and choose your key.
       </div>
     </div>
 
     <div class="card faq-item">
       <strong>Is it safe to use?</strong>
       <div class="faq-answer">
-        Vyn External is built with stability in mind. Always download from official sources.
+        Prism External is built with stability in mind. Always.
       </div>
     </div>
 
@@ -327,7 +327,7 @@
 </section>
 
 <footer>
-  © 2026 Vyn External — All rights reserved
+  © 2026 Prism External — All rights reserved
 </footer>
 
 <script>
